static/style.css
/* ... */
div._88x31s {
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    gap: 1px;

    & > * {
        width: 88px;
        height: 31px;
        display: block;
    }

    img {
        image-rendering: pixelated;
    }
}

.tablet-show {
    display: none;
}
@media (width <=48rem) {
    .tablet-show {
        display: initial;
    }

    .tablet-hide {
        display: none;
    }
}

.mobile-show {
    display: initial;
}

@media (width >=27rem) {
    .mobile-show {
        display: none;
    }
}

@media (width <=27rem) {
    .mobile-hide {
        display: inherit;
    }

    footer#page-footer {
        padding: 0.5em;
        font-size: 2em;
    }
}

.sr-only {
    clip: rect(1px, 1px, 1px, 1px);
    clip-path: inset(50%);
    height: 1px;
    width: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
}

.card-stack {
    display: grid;
    gap: 0.5em;
    grid-template-columns: repeat(auto-fill, 14em);
    justify-content: center;
}

.card:hover > .title {
    color: var(--anchor);
    text-decoration: underline;

    .year {
        color: var(--subtext);
    }
}

.card-stack > a {
    display: flex;
    flex-direction: column;
}

.card {
    border-radius: 0.5rem;
    background-color: var(--bg-surface0);
    color: var(--text);
    border: 1px solid var(--border);
    display: flex;
    flex-direction: column;
    height: 100%;
    overflow: clip;

    .preview {
        max-width: 100%;
        aspect-ratio: 16 / 9;
        background: var(--preview);
        display: flex;
        flex-direction: column;
        border-bottom: 1px solid var(--border);
        overflow: clip;

        img {
            margin: auto;
            max-width: 100%;
        }
    }

    .blurb {
        flex-grow: 1;
        padding: 0.5em;

        span {
            display: block;

            &.title {
                font-size: 1.2rem;
            }

            &.year {
                color: var(--anchor);
                display: inline;
                font-size: 0.8em;
            }

            &.description {
                color: var(--subtext);
                font-size: 0.8em;
            }
        }
    }

    .links {
        display: flex;
        flex-flow: row wrap;
        gap: 0.2em;
        justify-content: space-evenly;
        margin: 0.2em;

        a {
            color: var(--text);
            text-decoration: none;
            display: block;
            background-color: var(--bg-surface1);
            flex-grow: 1;
            border-top: var(--border);
            border: 1px solid var(--border);
            padding: 0.5em 0;
            border-radius: 0.3em;
            text-align: center;
        }
    }
}

blockquote {
    color: var(--text-hard);
    border-radius: 1rem;
    border-right: 1px solid var(--bg);
    border-left: 0.3rem solid var(--border);
    padding: 0.1rem 0.7rem;
    background-color: var(--bg-surface0);
    box-shadow: 0 0.1rem var(--bg);
    word-break: break-all;
}

blockquote.small {
    border-radius: 0.2rem;
    margin: 0 0.25em;
    padding: 0.25em;
}

bsky-comments {
    --background-color: var(--bg-surface1);
    --text-color: var(--text);
    --link-color: var(--anchor);
    --link-hover-color: var(--anchor-active);
    --comment-meta-color: var(--subtext);
    --reply-border-color: var(--border);
}

figcaption {
    text-align: center;
}

div.code-toolbar {
    color-scheme: dark;

    position: relative;
    margin: 1em 0px;
    border: 1px solid var(--border);
    border-radius: 0.5rem;
    overflow: hidden;

    .toolbar {
        color-scheme: light;

        background-color: var(--bg);

        border-bottom-left-radius: 0.5rem;
        font-family: var(--font-serif);
        border-left: 1px solid var(--border);
        border-bottom: 1px solid var(--border);

        padding: 0.2rem;
        position: absolute;
        right: 0;
        top: 0;
    }

    pre {
        margin: 0;
        border: 0;
        border-radius: 0;
        overflow-x: auto;
    }
}

pre {
    background-color: var(--plain-bg);
    padding: 1rem;
    border: 1px solid var(--border);
    border-radius: 0.5rem;
    font-family: var(--font-mono);
    font-size: 10pt;

    & b {
        font-weight: 500;
    }

    code {
        word-wrap: normal;
        white-space: pre;
    }

    @media (width <= 27rem) {
        & {
            font-size: 9pt;
        }
    }
}

pre[lang="ansi"] {
    --red: rgb(243 139 168);
    --green: rgb(166 227 161);
    --yellow: rgb(249 226 175);
    --blue: rgb(137 180 250);
    --pink: rgb(245 194 231);
    --teal: rgb(148 226 213);
    --black: #6c7086;
}

